--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -6,49 +6,48 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>810</width>
-    <height>520</height>
+    <width>382</width>
+    <height>518</height>
    </rect>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>810</width>
-    <height>520</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>810</width>
-    <height>520</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QListWidget" name="listWidget">
+   <widget class="QTextEdit" name="textEditInfoCert">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
-      <width>791</width>
-      <height>474</height>
+      <y>230</y>
+      <width>361</width>
+      <height>251</height>
      </rect>
     </property>
-    <property name="minimumSize">
-     <size>
-      <width>791</width>
-      <height>474</height>
-     </size>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>791</width>
-      <height>474</height>
-     </size>
+   </widget>
+   <widget class="QListWidget" name="listWidgetToken">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>0</y>
+      <width>361</width>
+      <height>211</height>
+     </rect>
     </property>
     <property name="styleSheet">
      <string notr="true"/>
+    </property>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>210</y>
+      <width>361</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </widget>
@@ -57,116 +56,85 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>810</width>
+     <width>382</width>
      <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
     <property name="title">
-     <string>Справка</string>
+     <string>Файл</string>
     </property>
-    <addaction name="actionAboutProg"/>
-    <addaction name="separator"/>
-    <addaction name="action_callback"/>
+    <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menu_2">
     <property name="title">
      <string>Операции</string>
     </property>
-    <addaction name="action_read_device"/>
-    <addaction name="action_enable_device"/>
-    <addaction name="action_disable_device"/>
-    <addaction name="action_reconnect_device"/>
+    <addaction name="actionReadDevice"/>
     <addaction name="separator"/>
-    <addaction name="action_start_utm"/>
-    <addaction name="action_stop_utm"/>
+    <addaction name="actionInstallUTM"/>
+    <addaction name="actionDeleteUTM"/>
     <addaction name="separator"/>
-    <addaction name="action_change_device"/>
+    <addaction name="actionStartUTM"/>
+    <addaction name="actionStopUTM"/>
     <addaction name="separator"/>
-    <addaction name="action_settings"/>
+    <addaction name="actionShowReaderNotContext"/>
    </widget>
    <widget class="QMenu" name="menu_3">
     <property name="title">
-     <string>Установка</string>
+     <string>О программе</string>
     </property>
-    <addaction name="action_install_utm"/>
-    <addaction name="action_uninstall_utm"/>
+    <addaction name="actionAboutProgramm"/>
+    <addaction name="actionCallBack"/>
    </widget>
-   <widget class="QMenu" name="menu_4">
-    <property name="title">
-     <string>Файл</string>
-    </property>
-    <addaction name="action_exit"/>
-   </widget>
-   <addaction name="menu_4"/>
+   <addaction name="menu"/>
    <addaction name="menu_2"/>
    <addaction name="menu_3"/>
-   <addaction name="menu"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionAboutProg">
-   <property name="text">
-    <string>О программе</string>
-   </property>
-  </action>
-  <action name="action_read_device">
-   <property name="text">
-    <string>Прочитать устройства</string>
-   </property>
-  </action>
-  <action name="action_enable_device">
-   <property name="text">
-    <string>Включить устройство</string>
-   </property>
-  </action>
-  <action name="action_install_utm">
-   <property name="text">
-    <string>Установить УТМ</string>
-   </property>
-  </action>
-  <action name="action_uninstall_utm">
-   <property name="text">
-    <string>Удалить УТМ</string>
-   </property>
-  </action>
-  <action name="action_callback">
-   <property name="text">
-    <string>Связь с разработчиком</string>
-   </property>
-  </action>
-  <action name="action_exit">
+  <action name="actionExit">
    <property name="text">
     <string>Выход</string>
    </property>
   </action>
-  <action name="action_disable_device">
+  <action name="actionReadDevice">
    <property name="text">
-    <string>Отключить устройство</string>
+    <string>Перечитать устройства</string>
    </property>
   </action>
-  <action name="action_reconnect_device">
+  <action name="actionInstallUTM">
    <property name="text">
-    <string>Переподключить устройства</string>
+    <string>Установить УТМы</string>
    </property>
   </action>
-  <action name="action_start_utm">
+  <action name="actionShowReaderNotContext">
    <property name="text">
-    <string>Запустить УТМ</string>
+    <string>Показать все ридеры вне контекста</string>
    </property>
   </action>
-  <action name="action_stop_utm">
+  <action name="actionStartUTM">
    <property name="text">
-    <string>Остановить УТМ</string>
+    <string>Запустить УТМы</string>
    </property>
   </action>
-  <action name="action_change_device">
+  <action name="actionStopUTM">
    <property name="text">
-    <string>Поменять порядок устройств</string>
+    <string>Остановить УТМы</string>
    </property>
   </action>
-  <action name="action_settings">
+  <action name="actionDeleteUTM">
    <property name="text">
-    <string>Настройки</string>
+    <string>Удалить УТМы</string>
+   </property>
+  </action>
+  <action name="actionAboutProgramm">
+   <property name="text">
+    <string>О программе</string>
+   </property>
+  </action>
+  <action name="actionCallBack">
+   <property name="text">
+    <string>Связь с разработчиком</string>
    </property>
   </action>
  </widget>
